crates/test-files/fixtures/compile_errors/struct_call_bad_args.fe
struct House:
    vacant: bool
    price: u256

contract Foo:

    pub fn bar():
        my_house: House = House(price=false, vacant=100, bar=address(0))
